remove app identifier
