# cardserver/src/main/java/nl/appsource/cardserver/utils/CardServerAuthentication.java
@@ -1,4 +1,4 @@
 package nl.appsource.cardserver.utils;
 
-public record CardServerAuthentication(String userId, String appIdentifier) {
+public record CardServerAuthentication(String userId) {
 }
