# openapi/src/main/resources/static/schema/api.yaml
@@ -11,8 +11,6 @@ servers:
 
 paths:
   /feedback:
-    parameters:
-      - $ref: "#/components/parameters/AppIdentifier"
     post:
       operationId: feedback
       requestBody:
@@ -30,8 +28,6 @@ paths:
         "200":
           description: ok
   /boom:
-    parameters:
-      - $ref: "#/components/parameters/AppIdentifier"
     get:
       operationId: getBooms
       responses:
@@ -53,8 +49,6 @@ paths:
               schema:
                 $ref: "#/components/schemas/Boom"
   /boom/{boomId}/play:
-    parameters:
-      - $ref: "#/components/parameters/AppIdentifier"
     post:
       operationId: playBoom
       parameters:
@@ -67,8 +61,6 @@ paths:
               schema:
                 $ref: "#/components/schemas/Game"
   /boom/{boomId}:
-    parameters:
-      - $ref: "#/components/parameters/AppIdentifier"
     get:
       operationId: getBoom
       parameters:
@@ -90,8 +82,6 @@ paths:
         "200":
           description: ok
   /debug/sseconnections/get:
-    parameters:
-      - $ref: "#/components/parameters/AppIdentifier"
     get:
       tags:
         - debug
@@ -100,8 +90,6 @@ paths:
         "200":
           $ref: "#/components/responses/SseConnectionsResponse"
   /debug/sseconnections/{sessionIdentifier}:
-    parameters:
-      - $ref: "#/components/parameters/AppIdentifier"
     delete:
       tags:
         - debug
@@ -132,8 +120,6 @@ paths:
         "200":
           $ref: "#/components/responses/LoadUserResponse"
   /games/{gameId}/say:
-    parameters:
-      - $ref: "#/components/parameters/AppIdentifier"
     post:
       operationId: say
       parameters:
@@ -148,8 +134,6 @@ paths:
         "404":
           description: not found
   /games/{gameId}/claimRoem:
-    parameters:
-      - $ref: "#/components/parameters/AppIdentifier"
     post:
       operationId: claimRoem
       parameters:
@@ -162,8 +146,6 @@ paths:
         "404":
           description: not found
   /games/{gameId}/claimVerzaken:
-    parameters:
-      - $ref: "#/components/parameters/AppIdentifier"
     post:
       operationId: claimVerzaken
       parameters:
@@ -176,8 +158,6 @@ paths:
         "404":
           description: not found
   /games/{gameId}/openLastTrick:
-    parameters:
-      - $ref: "#/components/parameters/AppIdentifier"
     post:
       operationId: openLastTrick
       parameters:
@@ -190,8 +170,6 @@ paths:
         "404":
           description: not found
   /games/{gameId}/closeLastTrick:
-    parameters:
-      - $ref: "#/components/parameters/AppIdentifier"
     post:
       operationId: closeLastTrick
       parameters:
@@ -204,8 +182,6 @@ paths:
         "404":
           description: not found
   /games/{gameId}/playCard:
-    parameters:
-      - $ref: "#/components/parameters/AppIdentifier"
     post:
       operationId: playCard
       parameters:
@@ -220,8 +196,6 @@ paths:
         "404":
           description: not found
   /games/{gameId}/kickAi:
-    parameters:
-      - $ref: "#/components/parameters/AppIdentifier"
     post:
       operationId: kickAi
       parameters:
@@ -234,8 +208,6 @@ paths:
         "404":
           description: not found
   /games:
-    parameters:
-      - $ref: "#/components/parameters/AppIdentifier"
     get:
       operationId: getGames
       parameters:
@@ -269,8 +241,6 @@ paths:
         "404":
           description: not found
   /games/{gameId}:
-    parameters:
-      - $ref: "#/components/parameters/AppIdentifier"
     get:
       operationId: getGame
       parameters:
@@ -288,8 +258,6 @@ paths:
         "200":
           description: ok
   /users/multiple/{userIds}:
-    parameters:
-      - $ref: "#/components/parameters/AppIdentifier"
     get:
       operationId: getUserByIds
       parameters:
@@ -298,24 +266,22 @@ paths:
         "200":
           $ref: "#/components/responses/UsersResponse"
   /ping:
-    parameters:
-      - $ref: "#/components/parameters/AppIdentifier"
     post:
       operationId: ping
+      requestBody:
+        $ref: "#/components/requestBodies/pingPongRequestBody"
       responses:
         "200":
           description: ok
   /pong:
-    parameters:
-      - $ref: "#/components/parameters/AppIdentifier"
     post:
       operationId: pong
+      requestBody:
+        $ref: "#/components/requestBodies/pingPongRequestBody"
       responses:
         "200":
           description: ok
   /users/updatePreferences:
-    parameters:
-      - $ref: "#/components/parameters/AppIdentifier"
     post:
       operationId: updatePreferences
       requestBody:
@@ -324,8 +290,6 @@ paths:
         "200":
           $ref: "#/components/responses/UserResponse"
   /users/single/{userId}:
-    parameters:
-      - $ref: "#/components/parameters/AppIdentifier"
     get:
       operationId: getUser
       parameters:
@@ -336,8 +300,6 @@ paths:
         "404":
           description: not found
   /users/invites:
-    parameters:
-      - $ref: "#/components/parameters/AppIdentifier"
     get:
       operationId: getInvites
       responses:
@@ -357,8 +319,6 @@ paths:
         "404":
           description: not found
   /users/invites/{userId}:
-    parameters:
-      - $ref: "#/components/parameters/AppIdentifier"
     delete:
       operationId: removeInvite
       parameters:
@@ -378,8 +338,6 @@ paths:
         "404":
           description: not found
   /users/message:
-    parameters:
-      - $ref: "#/components/parameters/AppIdentifier"
     post:
       operationId: usersMessage
       requestBody:
@@ -387,102 +345,6 @@ paths:
       responses:
         "200":
           description: ok
-#  /reloadCache:
-#    parameters:
-#      - $ref: "#/components/parameters/AppIdentifier"
-#    post:
-#      operationId: reloadCache
-#      responses:
-#        "200":
-#          description: ok
-#  /ai/createGame:
-#    post:
-#      tags:
-#        - aiapi
-#      operationId: aiCreateGame
-#      requestBody:
-#        required: true
-#        content:
-#          application/json:
-#            schema:
-#              type: object
-#              properties:
-#                gameVariant:
-#                  $ref: '#/components/schemas/GameVariant'
-#              required:
-#                - gameVariant
-#      responses:
-#        "200":
-#          description: Game Response
-#          content:
-#            application/json:
-#              schema:
-#                $ref: "#/components/schemas/Game"
-#  /ai/playCard:
-#    post:
-#      tags:
-#        - aiapi
-#      operationId: aiPlayCard
-#      requestBody:
-#        required: true
-#        content:
-#          application/json:
-#            schema:
-#              type: object
-#              properties:
-#                gameId:
-#                  type: string
-#                playerId:
-#                  type: string
-#                card:
-#                  $ref: '#/components/schemas/Card'
-#              required:
-#                - gameId
-#                - playerId
-#                - card
-#      responses:
-#        "200":
-#          description: Boomresponse
-#          content:
-#            application/json:
-#              schema:
-#                $ref: "#/components/schemas/Game"
-#  /ai/caldAiCard:
-#    post:
-#      tags:
-#        - aiapi
-#      operationId: calcAiCard
-#      requestBody:
-#        required: true
-#        content:
-#          application/json:
-#            schema:
-#              type: object
-#              properties:
-#                currentTrick:
-#                  type: array
-#                  items:
-#                    $ref: "#/components/schemas/Card"
-#                trumpSuit:
-#                  $ref: "#/components/schemas/Suit"
-#                hand:
-#                  type: array
-#                  items:
-#                    $ref: "#/components/schemas/Card"
-#                gameVariant:
-#                  $ref: '#/components/schemas/GameVariant'
-#              required:
-#                - currentTrick
-#                - trumpSuit
-#                - hand
-#                - gameVariant
-#      responses:
-#        "200":
-#          description: Boomresponse
-#          content:
-#            application/json:
-#              schema:
-#                $ref: "#/components/schemas/Card"
 components:
   requestBodies:
     sayRequest:
@@ -497,23 +359,18 @@ components:
         application/json:
           schema:
             $ref: "#/components/schemas/playCard"
-    #    pingPongRequestBody:
-    #      required: true
-    #      content:
-    #        application/json:
-    #          schema:
-    #            type: object
-    #            properties:
-    #              appIdentifier:
-    #                type: string
-    #            required:
-    #              - appIdentifier
     updatePreferences:
       required: true
       content:
         application/json:
           schema:
             $ref: "#/components/schemas/updatePreferences"
+    pingPongRequestBody:
+      required: true
+      content:
+        application/json:
+          schema:
+            $ref: "#/components/schemas/pingPongSchema"
     postMessage:
       required: true
       content:
@@ -521,12 +378,6 @@ components:
           schema:
             $ref: "#/components/schemas/postMessage"
   parameters:
-    AppIdentifier:
-      name: App-Identifier
-      in: header
-      schema:
-        type: string
-      required: true
     gameId:
       name: gameId
       in: path
@@ -799,6 +650,13 @@ components:
       required:
         - recipients
         - message
+    pingPongSchema:
+      type: object
+      properties:
+        appIdentifier:
+          type: string
+      required:
+        - appIdentifier
     updatePreferences:
       type: object
       properties:
